# crosspoint-reader

.github/workflows/: release.yml  release_candidate.yml
docs/: file-formats.md
lib/BackgroundWorker/: BackgroundWorker.cpp  BackgroundWorker.h
lib/EpdFont/: EpdFont.cpp  EpdFont.h  EpdFontFamily.cpp  EpdFontFamily.h  SdCardFont.cpp  SdCardFont.h  SdCardFontManager.h  SdCardFontRegistry.h
lib/EpdFont/builtinFonts/: notosans_8_regular.h  ubuntu_10_bold.h  ubuntu_10_regular.h  ubuntu_12_bold.h  ubuntu_12_regular.h
lib/EpdFont/scripts/: convert-builtin-fonts.sh  sd-fonts.yaml  tc-menu-chars.txt
lib/Epub/: Epub.cpp
lib/FsHelpers/: FsHelpers.cpp
lib/GfxRenderer/: Bitmap.cpp  Bitmap.h  BitmapHelpers.h  FontCacheManager.cpp  FontCacheManager.h  GfxRenderer.cpp  GfxRenderer.h
lib/JpegToBmpConverter/: JpegToBmpConverter.cpp  JpegToBmpConverter.h
lib/KOReaderSync/: ChapterXPathResolver.cpp
lib/Logging/: ErrorReport.h
lib/OpdsParser/: OpdsParser.cpp
lib/PngToBmpConverter/: PngToBmpConverter.cpp
lib/Serialization/: BufferedHalReader.h  Serialization.h  SerializationLimits.h
lib/Xtc/: Xtc.cpp  Xtc.h
lib/hal/: HalDisplay.cpp  HalDisplay.h  HalSystem.cpp  HalSystem.h
src/: SdCardFontSystem.cpp  SdCardFontSystem.h  SettingsList.h  main.cpp
src/components/: UITheme.cpp
test/: CMakeLists.txt
test/buffered_reader/: BufferedReaderTest.cpp  CMakeLists.txt
test/cjk_advance_parity/: CMakeLists.txt  CjkAdvanceParityTest.cpp
test/differential_rounding/: DifferentialRoundingTest.cpp
test/reader_shortcut_decision/: CMakeLists.txt  ReaderShortcutDecisionTest.cpp
test/serialization/: CMakeLists.txt  SerializationLimitsTest.cpp
test/thumb_scale/: CMakeLists.txt  ThumbScaleTest.cpp
test/xtc_status_bar_decision/: CMakeLists.txt  XtcStatusBarDecisionTest.cpp
(+33 files in other folders)
